[gd_scene load_steps=11 format=3 uid="uid://v1uemubo3trk"]

[ext_resource type="Script" path="res://Scenes/Game/Home/Door/door.gd" id="1_01bfn"]
[ext_resource type="PackedScene" uid="uid://2w6y6v1ibjxi" path="res://Scenes/Tests/Slot/slot.tscn" id="2_7tixl"]
[ext_resource type="PackedScene" uid="uid://drlwsjlocg23c" path="res://Scenes/Game/Home/Door/DoorWindow/door_window.tscn" id="2_70bci"]
[ext_resource type="Script" path="res://Resources/Item.gd" id="2_g5jxj"]
[ext_resource type="Resource" uid="uid://b8dibpsfka1x8" path="res://Resources/Potions/PotionStamina.tres" id="3_p5u8g"]
[ext_resource type="Resource" uid="uid://d2qnj6b3mkl0d" path="res://Resources/Potions/PotionStrenght.tres" id="4_l0pgw"]
[ext_resource type="Resource" uid="uid://dyljjx5q3ilc1" path="res://Resources/Potions/PotionHealing.tres" id="5_xkjpl"]
[ext_resource type="Texture2D" uid="uid://dsku03yxw0it0" path="res://Assets/Background/door_bg_placeholder.png" id="6_1aqeh"]
[ext_resource type="AudioStream" uid="uid://cuu0f85vb1xt6" path="res://Assets/Audio/door-knock-47175.mp3" id="9_f0p8m"]
[ext_resource type="AudioStream" uid="uid://c4x73b1lcv2ps" path="res://Assets/Audio/Door/openwindow.wav" id="10_d8bgn"]

[node name="Door" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01bfn")
orders = Array[ExtResource("2_g5jxj")]([ExtResource("3_p5u8g"), ExtResource("4_l0pgw"), ExtResource("5_xkjpl")])

[node name="Door_PlaceHolder" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1aqeh")

[node name="CheckDoor" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -682.0
offset_top = -144.0
offset_right = -454.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="OpenStore" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -319.0
offset_right = -145.0
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Day"

[node name="DoorWindow" parent="." instance=ExtResource("2_70bci")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1060.0
offset_top = 115.0
offset_right = -380.0
offset_bottom = 855.0
grow_horizontal = 0

[node name="ClientLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 228.0
offset_right = 532.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeliverySlot" parent="." instance=ExtResource("2_7tixl")]
layout_mode = 2
offset_left = 332.0
offset_top = 736.0
offset_right = 432.0
offset_bottom = 836.0

[node name="MoveRight_Door" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -45.5
offset_right = -32.0
offset_bottom = 45.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = ">"

[node name="MoveLeft_Door" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -45.5
offset_right = 74.0
offset_bottom = 45.5
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "<"

[node name="NewClientTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PatienceTimer" type="Timer" parent="."]
one_shot = true

[node name="Knock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_f0p8m")

[node name="WindowOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_d8bgn")

[connection signal="pressed" from="CheckDoor" to="." method="_on_check_door_pressed"]
[connection signal="pressed" from="OpenStore" to="." method="_on_open_store_pressed"]
[connection signal="dropped" from="DeliverySlot" to="." method="deliver"]
[connection signal="mouse_entered" from="DeliverySlot" to="." method="show_help" binds= ["door"]]
[connection signal="mouse_exited" from="DeliverySlot" to="." method="hide_help"]
[connection signal="pressed" from="MoveRight_Door" to="." method="_on_move_right_door_pressed"]
[connection signal="pressed" from="MoveLeft_Door" to="." method="_on_move_left_door_pressed"]
[connection signal="timeout" from="NewClientTimer" to="." method="_on_new_client_timer_timeout"]
[connection signal="timeout" from="PatienceTimer" to="." method="_on_patience_timer_timeout"]
